@@ -333,7 +333,7 @@ Java_org_simgrid_msg_Task_setPriority(JNIEnv * env,
   MSG_task_set_priority(task, (double) priority);
 }
 JNIEXPORT void JNICALL
-Java_org_simgrid_msg_Task_setComputeDuration
+Java_org_simgrid_msg_Task_setFlopsAmount
 		(JNIEnv *env, jobject jtask, jdouble computationAmount) {
 	msg_task_t task = jtask_to_native_task(jtask, env);
 
@@ -344,7 +344,7 @@ Java_org_simgrid_msg_Task_setComputeDuration
 	MSG_task_set_flops_amount(task, (double) computationAmount);
 }
 JNIEXPORT void JNICALL
-Java_org_simgrid_msg_Task_setDataSize
+Java_org_simgrid_msg_Task_setBytesAmount
 		(JNIEnv *env, jobject jtask, jdouble dataSize) {
 	msg_task_t task = jtask_to_native_task(jtask, env);
 
